# ihmc-video-codecs

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE_JCODEC  LICENSE_THIRD_PARTY  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  version.cmake
.github/: PULL_REQUEST_TEMPLATE.md
csrc/: CMakeLists.txt  JPEGDecoderImpl.cpp  JPEGDecoderImpl.h  JPEGEncoderImpl.cpp  JPEGEncoderImpl.h  OpenH264DecoderImpl.cpp  OpenH264DecoderImpl.h  OpenH264EncoderImpl.cpp  OpenH264EncoderImpl.h  RGBPicture.cpp  RGBPicture.h  YUVPicture.cpp  YUVPicture.h
examples/us/ihmc/codecs/: CreateMP4WithH264Example.java  CreateMP4WithJPEGExample.java  CreateScreenShotExample.java  JPEGExample.java  OpenH264EncoderExample.java  PlayMP4FileExample.java
gradleScripts/: dependencies.gradle  repositories.gradle  structure.gradle
resources/: libihmcVideoCodecs.jnilib  liblibyuv.jnilib  libopenh264bridge.jnilib
resources/us/ihmc/codecs/: Version.java
src/com/googlecode/mp4parser/authoring/builder/: UnbufferedDefaultMP4Builder.java  UnbufferedH264TrackImpl.java
src/main/examples/us/ihmc/codecs/: CreateMP4WithH264Example.java  CreateScreenShotExample.java
src/main/java/org/jcodec/common/: DemuxerTrack.java  JCodecUtil.java
src/main/java/org/jcodec/containers/mp4/boxes/: GenericMediaInfoBox.java  Header.java  NodeBox.java
src/main/java/org/jcodec/containers/mp4/muxer/: MP4Muxer.java  PCMMP4MuxerTrack.java  TimecodeMP4MuxerTrack.java
src/main/java/us/ihmc/codecs/builder/: MP4H264MovieBuilder.java
src/main/java/us/ihmc/codecs/demuxer/: AVCDemuxerHelper.java  MP4VideoDemuxer.java
src/main/java/us/ihmc/codecs/h264/: H264Encoder.java  NALType.java  OpenH264Decoder.java
src/main/java/us/ihmc/codecs/screenCapture/: ScreenCapture.java  ScreenCaptureFactory.java
src/main/java/us/ihmc/codecs/yuv/: JPEGDecoder.java  RGBPictureConverter.java  YUVPictureConverter.java
src/main/swig/: CMakeLists.txt  ihmcVideoCodecs.i  openH264Wrapper.i
src/org/jcodec/common/: Codec.java
src/org/jcodec/containers/mp4/boxes/: AliasBox.java  Box.java  FileTypeBox.java  FormatBox.java  HandlerBox.java  NameBox.java  SampleSizesBox.java  WaveExtension.java
src/org/jcodec/containers/mp4/demuxer/: AbstractMP4DemuxerTrack.java  FramesMP4DemuxerTrack.java  TimecodeMP4DemuxerTrack.java
src/org/jcodec/containers/mp4/muxer/: FramesMP4MuxerTrack.java  PCMMP4MuxerTrack.java
src/org/jcodec/movtool/: Util.java
src/test/java/us/ihmc/codecs/: JPEGTest.java
src/us/ihmc/codecs/: VideoDecoder.java  VideoEncoder.java  YUVPicture.java
src/us/ihmc/codecs/builder/: ByteBufferImageOutputStream.java  H264Settings.java  JPEGMovieBuilder.java  MP4H264MovieBuilder.java  MP4MJPEGMovieBuilder.java  MovieBuilder.java  MovieBuilderTools.java
src/us/ihmc/codecs/colorSpace/: YCbCr420.java
src/us/ihmc/codecs/demuxer/: AVCDemuxerHelper.java  DemuxerHelper.java  JPEGDemuxerHelper.java  MP4VideoDemuxer.java
src/us/ihmc/codecs/h264/: H264Decoder.java  H264Encoder.java  NALProcessor.java  NALType.java  OpenH264Decoder.java  OpenH264Encoder.java  OutputProcessor.java  TestOpenH264Encoder.java
src/us/ihmc/codecs/loader/: NativeLibraryLoader.java  OpenH264Downloader.java
src/us/ihmc/codecs/muxer/: MP4H264Movie.java  MP4H264Muxer.java
src/us/ihmc/codecs/screenCapture/: LinuxNativeScreenCapture.java  RobotScreenCapture.java  ScreenCapture.java  ScreenCaptureFactory.java
src/us/ihmc/codecs/util/: ByteBufferProvider.java  MemoryManagement.java
src/us/ihmc/codecs/yuv/: JPEGDecoder.java  JPEGEncoder.java  RGBPictureConverter.java  YUV420Picture.java  YUV422Picture.java  YUV444Picture.java  YUVPicture.java  YUVPictureConverter.java
src/us/ihmc/video/containers/: MP4ParserTest.java
swig/: .CMakeLists.txt.swp  .definitions.h.swp  .libyuv.i.swp  CMakeLists.txt  ISVCDecoder.i  ISVCEncoder.i  SBufferInfo.i  SEncParamExt.i  SFrameBSInfo.i  SLayerInfo.i  SSourcePicture.i  STargetPicture.hpp  ScreenShot.i  SliceInformation.i  codec_api.i  definitions.h  ignore.i  ihmcVideoCodecs.i  libyuv.i  openH264Wrapper.i  openh264.i  outargs.i  var_arrays.i  wels.hpp  yuvWrapper.i
test/us/ihmc/codecs/: JPEGTest.java
