cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
SET(CMAKE_SWIG_OUTDIR "${CMAKE_CURRENT_SOURCE_DIR}/generated/org/openh264")

INCLUDE_DIRECTORIES("${OPENH264_HOME}/codec/api/svc")
LINK_DIRECTORIES("${OPENH264_HOME}")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET_SOURCE_FILES_PROPERTIES(openh264.i PROPERTIES CPLUSPLUS ON)
SET_PROPERTY(SOURCE openh264.i PROPERTY SWIG_FLAGS "-package" "org.openh264")
SWIG_ADD_MODULE(openh264bridge java openh264.i)
SWIG_LINK_LIBRARIES(openh264bridge openh264)

SET(CMAKE_SWIG_OUTDIR "${CMAKE_CURRENT_SOURCE_DIR}/generated/com/google/code/libyuv")
LINK_DIRECTORIES("${LIBYUV_HOME}/out/Release")
LINK_DIRECTORIES("${LIBYUV_HOME}/out/Release/obj/third_party/libjpeg_turbo")
INCLUDE_DIRECTORIES("${LIBYUV_HOME}/include")
SET_SOURCE_FILES_PROPERTIES(libyuv.i PROPERTIES CPLUSPLUS ON)
SET_PROPERTY(SOURCE libyuv.i PROPERTY SWIG_FLAGS "-package" "com.google.code.libyuv")
SWIG_ADD_MODULE(libyuv java libyuv.i)
SWIG_LINK_LIBRARIES(libyuv libyuv.a libjpeg_turbo.a)
