cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
SET(CMAKE_SWIG_OUTDIR "${CMAKE_CURRENT_SOURCE_DIR}/generated/org/openh264")

add_custom_target(version COMMAND ${CMAKE_COMMAND} -P ${CMAKE_SOURCE_DIR}/version.cmake WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})


INCLUDE_DIRECTORIES("${OPENH264_HOME}/codec/api/svc")
LINK_DIRECTORIES("${OPENH264_HOME}")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET_SOURCE_FILES_PROPERTIES(openh264.i PROPERTIES CPLUSPLUS ON)
SET_PROPERTY(SOURCE openh264.i PROPERTY SWIG_FLAGS "-package" "org.openh264")
SWIG_ADD_MODULE(openh264bridge java openh264.i)
ADD_DEPENDENCIES(openh264bridge version)

SWIG_LINK_LIBRARIES(openh264bridge openh264)

SET(CMAKE_SWIG_OUTDIR "${CMAKE_CURRENT_SOURCE_DIR}/generated/com/google/code/libyuv")

IF(WIN32)
	LINK_DIRECTORIES("${LIBYUV_HOME}/out/Release_x64")
	LINK_DIRECTORIES("${LIBYUV_HOME}/out/Release_x64/obj/third_party/libjpeg_turbo")
ELSE()
	LINK_DIRECTORIES("${LIBYUV_HOME}/out/Release")
	LINK_DIRECTORIES("${LIBYUV_HOME}/out/Release/obj/third_party/libjpeg_turbo")
ENDIF(WIN32)
INCLUDE_DIRECTORIES("${LIBYUV_HOME}/include")
SET_SOURCE_FILES_PROPERTIES(libyuv.i PROPERTIES CPLUSPLUS ON)
SET_PROPERTY(SOURCE libyuv.i PROPERTY SWIG_FLAGS "-package" "com.google.code.libyuv")
SWIG_ADD_MODULE(libyuv java libyuv.i)
ADD_DEPENDENCIES(libyuv version)
IF(WIN32)
	SWIG_LINK_LIBRARIES(libyuv libyuv.lib libjpeg.lib)
ELSE()
	SWIG_LINK_LIBRARIES(libyuv libyuv.a libjpeg_turbo.a)
ENDIF(WIN32)
INSTALL(TARGETS libyuv openh264bridge RUNTIME DESTINATION resources LIBRARY DESTINATION resources)

if(APPLE)
	SET_TARGET_PROPERTIES(openh264bridge PROPERTIES INSTALL_RPATH "@loader_path/")
	add_custom_command(TARGET openh264bridge POST_BUILD COMMAND ${CMAKE_INSTALL_NAME_TOOL} -change libopenh264.dylib @rpath/libopenh264.dylib $<TARGET_FILE:openh264bridge>)
endif(APPLE)

FIND_PACKAGE(X11)

IF(X11_FOUND)
SET(CMAKE_SWIG_OUTDIR "${CMAKE_CURRENT_SOURCE_DIR}/generated/us/ihmc/codecs/screenCapture")

SET_SOURCE_FILES_PROPERTIES(ScreenShot.i PROPERTIES CPLUSPLUS ON)
SET_PROPERTY(SOURCE ScreenShot.i PROPERTY SWIG_FLAGS "-package" "us.ihmc.codecs.screenCapture")
INCLUDE_DIRECTORIES(X11_INCLUDE_DIR)
SWIG_ADD_MODULE(screenshot java ScreenShot.i)
ADD_DEPENDENCIES(screenshot version)
SWIG_LINK_LIBRARIES(screenshot ${X11_LIBRARIES})
INSTALL(TARGETS screenshot RUNTIME DESTINATION resources LIBRARY DESTINATION resources)
ENDIF(X11_FOUND)
